// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SectionBackground /> should render with barkground dark 1`] = `
.c0 {
  background: #f0f0f2;
  color: #000000;
  background: #023059;
  color: #f0f0f2;
  min-height: 100vh;
  display: flex;
  align-items: center;
}

.c1 {
  max-width: 120rem;
  margin: 0 auto;
  padding: 3.2rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      Children
    </div>
  </div>
</div>
`;

exports[`<SectionBackground /> should render with barkground light 1`] = `
.c0 {
  background: #f0f0f2;
  color: #000000;
  min-height: 100vh;
  display: flex;
  align-items: center;
}

.c1 {
  max-width: 120rem;
  margin: 0 auto;
  padding: 3.2rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      Children
    </div>
  </div>
</div>
`;
